# mathsciNet_UNITO

./: .gitignore  log.txt  mathscinet_databse.db  peano_unito_MATHSCINET.py  pyproject.toml  variabili.ini  versionfile.txt
container/: Dockerfile  linea_powershell_container  log.txt  peano_unito_MATHSCINET.py  requirements.txt  test_db.py
container/risorse/: mathscinet_databse.db  variabili.ini
files_di_prova/MAT01/: Lista_MAT01-Logica_Matematica_2016_-1.1.xlsx  Lista_MAT01.csv
files_di_prova/MAT02/: Lista_MAT02.csv  Lista_MAT02.xlsx
files_di_prova/MAT03/: Lista_MAT03.csv  Lista_MAT03.xlsx
files_di_prova/MAT05/: Lista_MAT05.csv  Lista_MAT05.xlsx
risorse/: mathscinet_databse.db  variabili.ini
version7_terminal/: Lista_MAT01-Logica_Matematica_2019_-1.8.csv  peano_unito_MATHSCINET.py
version7_terminal/risorse/: mathscinet_databse.db  variabili.ini
versione 10 per unix/: README.txt  installazione_iniziale.sh  peano_unito_MATHSCINET.py
versione 10 per unix/risorse/: variabili.ini
versione 10 programma/: log.txt  peano_unito_MATHSCINET.py
versione 10 programma/compilato/: log.txt
versione 11 per unix (ancora da testare)/: SECONDO_AVVIO.txt  installazione_iniziale.sh  log.txt  peano_unito_MATHSCINET.py
versione 11 programma/: modifica_var_input.py  peano_unito_MATHSCINET.py  peano_unito_MATHSCINET.spec
versione 8 programma/: peano_unito_MATHSCINET.py
versione 8 programma UI/: peano_unito_MATHSCINET.py
versione 9 programma/: peano_unito_MATHSCINET.py
versione 9 programma UI/: peano_unito_MATHSCINET.py
versione 9 programma/compilato/: log.txt
(+18 files in other folders)
